--- a/Solution_f/RecruiterApp/Candidate Page/CandidatePage.xaml
+++ b/Solution_f/RecruiterApp/Candidate Page/CandidatePage.xaml
@@ -2,7 +2,28 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="RecruiterApp.CandidatePage" Title="Candidate">
 	<ContentPage.Content>
 		<StackLayout>
+      <ActivityIndicator Grid.RowSpan="2" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="False" IsEnabled="True" x:Name="syncIndicator" />
 			<ListView x:Name="candidateListView" ItemTapped="SelectionMade">
+
+
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            <ViewCell>
+              <ViewCell.ContextActions>
+                <MenuItem  CommandParameter="{Binding firstName}" />
+              </ViewCell.ContextActions>
+              <StackLayout HorizontalOptions="StartAndExpand" Orientation="Horizontal" Padding="15,5,0,0">
+                <StackLayout Padding="5,0,0,0" VerticalOptions="StartAndExpand" Orientation="Vertical">
+                  <Label Text="{Binding nameString}" />
+                </StackLayout>
+              </StackLayout>
+            </ViewCell>
+          </DataTemplate>
+        </ListView.ItemTemplate>
+        
+        
+        
+        
 			</ListView>
 		</StackLayout>
 	</ContentPage.Content>
